# aximux

./: .gitignore  Makefile  README.md  pyproject.toml
driver/: .gitignore  aximux.c  aximux.dtsi
generator/: Makefile  aximux.tcl  axislave.mm  mux_gen.py
test/: .gitignore  Makefile  test_aximux.py
