[tool.poetry]
name = "aximux"
version = "0.1.0"
description = ""
authors = ["Bruno <brunosmmm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hdltools = {git = "https://github.com/brunosmmm/hdltools", rev = "f3cbe083b3f862fe9b5adb756242bc4cedc7ba72"}


[tool.poetry.group.dev.dependencies]
cocotb = "^1.7.2"
cocotb-test = "^0.2.4"
cocotbext-axi = "^0.1.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
